--- a/fatfs/Cargo.toml
+++ b/fatfs/Cargo.toml
@@ -5,4 +5,4 @@ edition = "2021"
 description = "FatFS driver for Glenda Microkernel, supporting FAT16,FAT32 and exFAT"
 
 [dependencies]
-libglenda-rs = { path = "../../../lib/libglenda-rs", features = ["rt-service"] }
+libglenda-rs = { path = "../../lib/libglenda-rs", features = ["rt-service"] }
