--- a/initrdfs/Cargo.toml
+++ b/initrdfs/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
-name = "fatfs"
+name = "initrdfs"
 version = "0.1.0"
 edition = "2021"
-description = "FatFS driver for Glenda Microkernel, supporting FAT16,FAT32 and exFAT"
 
 [dependencies]
 libglenda-rs = { path = "../../lib/libglenda-rs", features = ["rt-service"] }
 libglenda_drivers-rs = { path = "../../lib/libglenda_drivers-rs" }
+serde = { version = "1.0", default-features = false, features = [
+    "derive",
+    "alloc",
+] }
